--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Thumbs.db
 #####################
 *.sublime-project
 *.sublime-workspace
+/.vs/config/applicationhost.config
+/.vs/sims-website/v14/.suo
+/sims-website.sln
